test/bad/complete-trash.sam
// ERROR_COUNT: 1
// complete-trash.sam:4:1-4:5: [SyntaxError]: mismatched input 'This' expecting {<EOF>, 'import', 'class', 'private'}

This is a bad source.
